--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,7 +9,7 @@
     <TabControl>
         <TabItem Header="Racuni" FontSize="18">
             <StackPanel Orientation="Horizontal">
-                <DockPanel>
+                <DockPanel Margin="0,2,0,-2">
                     <StackPanel Name="UnosRac" DockPanel.Dock="Top" Orientation="Horizontal">
                         <TextBox Text="{Binding TrenutnaSifra, UpdateSourceTrigger=Explicit}" MinWidth="50"/>
                         <TextBox Text="{Binding TrenutnaKolicina, UpdateSourceTrigger=Explicit}" MinWidth="50"/>
@@ -21,8 +21,15 @@
                         <Button Content="Izdaj" Click="Izdavanje"/>
                         <Button Content="Ponisti"/>
                     </UniformGrid>
-                    <DataGrid Name="dgStavke" IsReadOnly="True" ColumnWidth="*" Margin="0,1.333,0,-1"/>
-                </DockPanel>
+					<DataGrid Width="400" Name="dgStavke" IsReadOnly="True" ColumnWidth="*" AutoGenerateColumns="False">
+						<DataGrid.Columns>
+							<DataGridTextColumn Header="Sifra" Binding="{Binding Art.Sifra}"/>
+							<DataGridTextColumn Header="Naziv" Binding="{Binding Art.Naziv}"/>
+							<DataGridTextColumn Header="Kolicina" Binding="{Binding Kolicina}"/>
+							<DataGridTextColumn Header="Total" Binding="{Binding Zbir}"/>
+						</DataGrid.Columns>
+					</DataGrid>
+				</DockPanel>
                 <StackPanel>
                     <DataGrid Name="dgRacuni" IsReadOnly="True" ColumnWidth="*"/>
                 </StackPanel>
